2005-10-19  Philip Van Hoof <pvanhoof@gnome.org>
	composer/e-msg-composer-select-file.c,
	composer/e-msg-composer.c, composer/e-msg-composer.h,
	composer/evolution-composer.c, composer/listener.c,
	mail/em-composer-utils.c,
	plugins/mailing-list-actions/mailing-list-actions.c:
	data hiding
						
2005-10-18  Srinivasa Ragavan <sragavan@novell.com>

	* org-gnome-mailing-list-actions.eplug.xml: Changed visible to
	enabled. Fixes the bug #314899

2005-08-08  Not Zed  <NotZed@Ximian.com>

	** See bug #312621.

	* mailing-list-actions.c (emla_list_action_do): noop if msg =
	NULL.

2005-08-02  Not Zed  <NotZed@Ximian.com>

	* mailing-list-actions.c (emla_list_action_do): allocate enough
	space for the url.  May be related to #304461.

2005-05-16  Not Zed  <NotZed@Ximian.com>

	* mailing-list-actions.c: moved e-error to e-util

2005-05-13  Rodney Dawes  <dobey@novell.com>

	* org-gnome-mailing-list-actions.xml: Update for the new menu layout

2005-05-11  Not Zed  <NotZed@Ximian.com>

	* Makefile.am (CLEANFILES): setup cleanfiles.

2005-05-06  Not Zed  <NotZed@Ximian.com>

	* org-gnome-mailing-list-actions.error.xml:
	s/-errors.xml/.error.xml/ & i18n tags.

	* Makefile.am:
	* org-gnome-mailing-list-actions.eplug.xml: s/.in/.xml/, & i18n.

2005-02-24  Björn Torkelsson  <torkel@acc.umu.se>

	* org-gnome-mailing-list-actions.eplug.in: Fixed description and
	added author. 
	Removed 'plugin' from the name.

2004-11-24  JP Rosevear  <jpr@novell.com>

	* mailing-list-actions.c: make sure GETTEXT_PACKAGE is defined

2004-11-04  Meilof Veeningen  <meilof@wanadoo.nl>

	* org-gnome-mailing-list-actions.eplug.in: Added author tag, fixed
	description, removed "plugin" from name, changed position of item
	in popup menu, using "enable" rather than "visible" for bonobo menus

	* org-gnome-mailing-list-actions.xml: Now place menus in
	MailMessageActions placeholder; moved label to <commands> section

	* org-gnome-mailing-list-actions-errors.xml: fixed button order: