@@ -12,12 +12,12 @@
     <placeholder name="MessagePlaceholder">
       <submenu name="Message">
       <submenu name="List" _label="Mailing _List">    
-        <menuitem verb="ListHelp" _label="Get list _usage information"/>
-        <menuitem verb="ListSubscribe" _label="_Subscribe to list"/>
-        <menuitem verb="ListUnsubscribe" _label="_Un-subscribe to list"/>
-        <menuitem verb="ListPost" _label="_Post message to list"/>
-        <menuitem verb="ListOwner" _label="Contact list _owner"/>
-        <menuitem verb="ListArchive" _label="Get list _archive"/>
+        <menuitem verb="ListHelp" _label="Get List _Usage Information"/>
+        <menuitem verb="ListSubscribe" _label="_Subscribe to List"/>
+        <menuitem verb="ListUnsubscribe" _label="_Unsubscribe from List"/>
+        <menuitem verb="ListPost" _label="_Post Message to List"/>
+        <menuitem verb="ListOwner" _label="Contact List _Owner"/>
+        <menuitem verb="ListArchive" _label="Get List _Archive"/>
       </submenu>
     </submenu>
     </placeholder>
