@@ -1,3 +1,8 @@
+2006-07-08  Matthew Barnes  <mbarnes@redhat.com>
+
+	* org-gnome-mailing-list-actions.xml: Fixing header capitalization
+	in menu. Fixes bug #323952. (Committed by Andre Klapper)
+
 2005-10-19  Philip Van Hoof <pvanhoof@gnome.org>
 	composer/e-msg-composer-select-file.c,
 	composer/e-msg-composer.c, composer/e-msg-composer.h,
